# workload-parser

./: .gitignore  ARCHITECTURE_DESIGN.md  PROJECT_SUMMARY.md  ParseAll_copy.py  README.md  README_DISTRIBUTION.md  Si_test01.py  build_executable.ps1  demo_enhanced_parser.py  pyproject.toml  requirements.txt  run_integration_tests.ps1  setup.py  test_socwatch_enhancement.py  wlparser.py  wlparser.spec  workload_analyzer.py
config/: daq_targets_default.json  enhanced_parser_config.json  parser_config.json  parser_config.yaml  pcie_targets_default.json  socwatch_targets_default.json
docs/: INTEGRATION_TESTS_QUICK_REF.md  README.md  TERMINOLOGY_GUIDE.md
docs/pcie/: QUICK_REFERENCE.md  README.md  SOCWATCH_HANDLING.md
examples/: basic_usage.py  pcie_parsing_example.py
scripts/: README.md  build_executable.ps1
test_results/: WW2532.2_CataV3ff_parsed_summary.json
tests/: TEST_INTEGRATION_README.md  __init__.py  test_core.py  test_data_integration.py  test_pcie_parser.py
workload_parser/: __init__.py  cli.py
workload_parser/core/: __init__.py  config.py  config_old.py  enhanced_config.py  exceptions.py  parser.py
workload_parser/parsers/: __init__.py  etl_parser.py  hobl_parser.py  intel_parsers.py  power_parser.py  socwatch_parser.py
workload_parser/utils/: logger.py
